<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/roads_1"
    tools:context=".Fragments.FindShipperFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/rider_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:hint="@string/destination"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/dark"
            android:textColorHint="@color/dark"
            android:theme="@style/EditText"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/rider_pickup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:hint="@string/pickup_point"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/dark"
            android:textColorHint="@color/dark"
            android:theme="@style/EditText"
            tools:targetApi="o" />

        <Spinner
            android:id="@+id/time_select2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="80dp"
            android:entries="@array/time"
            tools:targetApi="o" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/number_of_items"
                android:textAlignment="center"
                android:textColor="@color/dark"
                tools:ignore="RelativeOverlap" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/minus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/round_button"
                    android:text="@string/minus"
                    tools:ignore="ButtonStyle" />

                <TextView
                    android:id="@+id/seats"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent" />

                <Button
                    android:id="@+id/plus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/round_button"
                    android:text="@string/plus"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/rider_use_current_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:background="@color/colorPrimaryDark"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/use_current_location"
            android:textColor="@color/dark" />

        <Button
            android:id="@+id/rider_find_ride"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:background="@color/colorPrimary"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/find_a_shipper"
            android:textColor="@color/dark" />
    </LinearLayout>

</ScrollView>