<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/roads_1"
    tools:context=".Activities.UserSignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/rider_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:hint="@string/full_name"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:theme="@style/EditText"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/rider_sign_up_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:hint="@string/phone_number"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:theme="@style/EditText"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/rider_sign_up_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:hint="@string/email_id"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:theme="@style/EditText"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/rider_sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:hint="@string/enter_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:theme="@style/EditText"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/rider_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:theme="@style/EditText"
            tools:targetApi="o" />

        <Button
            android:id="@+id/rider_sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:background="@color/colorPrimary"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/confirm"
            android:textColor="@color/dark" />

        <Button
            android:id="@+id/rider_back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:background="@color/colorPrimaryDark"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/go_back"
            android:textColor="@color/dark" />
    </LinearLayout>
</ScrollView>
