<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/roads_1"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:labelFor="@id/name_show"
            android:text="@string/full_name"
            android:textColor="@color/dark"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="80dp"
            android:text="@string/app_name"
            android:textColor="@color/dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="80dp"
            android:labelFor="@id/phone_show"
            android:text="@string/phone_number"
            android:textColor="@color/dark"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phone_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="80dp"
            android:text="@string/app_name"
            android:textColor="@color/dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="80dp"
            android:labelFor="@id/type_show"
            android:text="@string/profile"
            android:textColor="@color/dark"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/type_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="80dp"
            android:text="@string/app_name"
            android:textColor="@color/dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="80dp"
            android:labelFor="@id/email_show"
            android:text="@string/email"
            android:textColor="@color/dark"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="80dp"
            android:text="@string/app_name"
            android:textColor="@color/dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="80dp"
            android:labelFor="@id/car_show"
            android:text="@string/vehicle_number"
            android:textColor="@color/dark"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/car_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="80dp"
            android:text="@string/n_a"
            android:textColor="@color/dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/log_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/button"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/log_out"
            android:textColor="@color/dark" />

        <Button
            android:id="@+id/edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/button"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="Edit Profile"
            android:textColor="@color/dark" />
    </LinearLayout>
</ScrollView>